--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -7,6 +7,8 @@
 
 agents: { queue: "papers" }
 
+concurrency: 2
+
 env:
   # Builds in e.g. "/build/prh-3574/{run0,run1,run2...}", output to "make-prh.log"
   BUILDPIPE : ".buildkite/bin/prh.sh /build/prh${BUILDKITE_BUILD_NUMBER}"
