per step concurrency?

--- a/.buildkite/pipelines/qrc.yml
+++ b/.buildkite/pipelines/qrc.yml
@@ -7,14 +7,14 @@
 
 agents: { queue: "papers" }
 
-concurrency: 2
-
 env:
   # Builds in e.g. "/build/prh-3574/{run0,run1,run2...}", output to "make-prh.log"
   BUILDPIPE : ".buildkite/bin/prh.sh /build/prh${BUILDKITE_BUILD_NUMBER}"
 
 # BIG TEST - run two at a time
 steps:
+  - concurrency: 2
+
   - label:   "tst0"
     # command: '$$BUILDPIPE/tst0'
     command: 'sleep 10; exit 13'
