--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -101,32 +101,36 @@ steps:
 #   - if build fails, rename step to <step>-fail<i> and exit 13
 #   - meanwhile tees all outputs to make-prh.log
 #   - (if build fails, moves make-prh.log to step dir)
+########################################################################
 
 # postroute_hold, retry if fail
-- label:   "hold1"
+- label:   "hold"
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD - FIRST ATTEMPT";
-     $$GARNET_HOME/.buildkite/bin/prh.sh $$GOLD'
+     echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
+     $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh1.log'
 - wait: { continue_on_failure: true }
 
-# first retry, continue with another retry on failure
-- label:   "hold2"
+# First retry, continue with another retry on failure.
+- label:   "hold'"
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD - SECOND ATTEMPT";
-     $$GARNET_HOME/.buildkite/bin/prh.sh $$GOLD'
+     echo "--- POSTROUTE_HOLD - SECOND ATTEMPT"; set -o pipefail;
+     $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh2.log'
 - wait: { continue_on_failure: true }
 
-# Final postroute_hold attempt, fail pipeline if this one bombs
-- label:   "hold3"
+# Final postroute_hold attempt, fail pipeline if this one bombs.
+- label:   "hold''"
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD - SECOND ATTEMPT";
-     $$GARNET_HOME/.buildkite/bin/prh.sh $$GOLD'
-- wait: ~
-
+     echo "--- POSTROUTE_HOLD - FINAL ATTEMPT"; set -o pipefail;
+     $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh3.log'
+- wait: { continue_on_failure: true }
+  
 ########################################################################
+# continue
+########################################################################
+
 - label: 'lvs'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 61G;
