--- a/.buildkite/pipeline_fullchip_hold_only.yml
+++ b/.buildkite/pipeline_fullchip_hold_only.yml
@@ -5,20 +5,16 @@ agents: { queue: "papers" }
 
 env:
   GOLD: /build/gold.${BUILDKITE_BUILD_NUMBER}/full_chip
+  PHREF:  /sim/buildkite-agent/gold
 
 steps:
 
+# Initial "mflowgen run" directory and makefile setup
 - label: 'setup'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
      mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
 - wait: ~
-
-
-
-
-
-
 
 
 ########################################################################
@@ -37,29 +33,37 @@ steps:
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
      echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
-     REF=/sim/buildkite-agent/gold;
-     echo "--- $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$REF";
-     $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$REF || exit 13;
+     echo "--- $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF";
+     $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF || exit 13;
      echo "--- $$GARNET_HOME/.buildkite/bin/prh.sh";
      $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh1.log'
 - wait: { continue_on_failure: true }
 
-# # First retry, continue with another retry on failure.
-# - label: "hold'"
-#   commands:
-#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-#      echo "--- POSTROUTE_HOLD - SECOND ATTEMPT"; set -o pipefail;
-#      $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh2.log'
-# - wait: { continue_on_failure: true }
-# 
-# # Final postroute_hold attempt, fail pipeline if this one bombs.
-# - label: "hold''"
-#   commands:
-#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-#      echo "--- POSTROUTE_HOLD - FINAL ATTEMPT"; set -o pipefail;
-#      $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh3.log'
-# - wait: ~
-#   
+# First retry, continue with another retry on failure.
+- label: "hold'"
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- POSTROUTE_HOLD - SECOND ATTEMPT"; set -o pipefail;
+     echo "--- $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF";
+     $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF || exit 13;
+     echo "--- $$GARNET_HOME/.buildkite/bin/prh.sh";
+     $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh2.log'
+- wait: { continue_on_failure: true }
+
+# Final postroute_hold attempt, fail pipeline if this one bombs.
+- label: "hold''"
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- POSTROUTE_HOLD - FINAL ATTEMPT"; set -o pipefail;
+     echo "--- $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF";
+     $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF || exit 13;
+     echo "--- $$GARNET_HOME/.buildkite/bin/prh.sh";
+     $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh3.log'
+- wait: ~
+
+
+
+  
 # ########################################################################
 # # continue
 # ########################################################################
