--- a/.buildkite/pipelines/postroute_hold_standalone.yml
+++ b/.buildkite/pipelines/postroute_hold_standalone.yml
@@ -3,47 +3,16 @@
 agents: { queue: "papers" }
 
 env:
-  GOLD:      /build/gold.${BUILDKITE_BUILD_NUMBER}/full_chip
-  SETUP_BK:  source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space
-  PHREF:     /sim/buildkite-agent/gold
-  SETUP_PRH: $$GARNET_HOME/mflowgen/bin/get-step-context.sh $$PHREF
-  RUN_PRH:   $$GARNET_HOME/.buildkite/bin/prh.sh |& tee
+  GOLD:      foo
+  SETUP_BK:  echo 1. $$GOLD
+  PHREF:     echo 2. $GOLD
+  SETUP_PRH: /bin/bash -c "echo 3. $$GOLD"
+  RUN_PRH:   echo 
 
 steps:
-  - label: 'setup'
-    commands:
-    - '$$SETUP_BK 1G;
-       mflowgen run --design $$GARNET_HOME/mflowgen/full_chip'
-  - wait: ~
-
-  ########################################################################
-  # postroute_hold fails sometimes, thus all this infrastructure for retry.
-  # 
-  # "prh.sh" does the following:
-  #   - make postroute_hold
-  #   - check for errors; exit 13 if errors found
-  #
-  # Note if "make postroute_hold" did error-checking correctly, we would
-  # not need prh.sh. Maybe this is a subject for a future github issue.
-  ########################################################################
 
   # postroute_hold, retry if fail.
   - label: "hold"
     commands:
     - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
        $$SETUP_BK 1G; $$SETUP_PRH; $$RUN_PRH make-prh1.log'
-  - wait: { continue_on_failure: true }
-
-  # First retry, continue with another retry on failure.
-  - label: "hold'"
-    commands:
-    - 'echo "--- POSTROUTE_HOLD - SECOND ATTEMPT"; set -o pipefail;
-       $$SETUP_BK 1G; $$SETUP_PRH; $$RUN_PRH make-prh2.log'
-  - wait: { continue_on_failure: true }
-
-  # Final postroute_hold attempt, fail pipeline if this one bombs.
-  - label: "hold''"
-    commands:
-    - 'echo "--- POSTROUTE_HOLD - FINAL ATTEMPT"; set -o pipefail;
-       $$SETUP_BK 1G; $$SETUP_PRH; $$RUN_PRH make-prh3.log'
-  - wait: ~
