--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -5,6 +5,7 @@ agents: { queue: "papers" }
 
 env:
   GOLD: /build/gold.${BUILDKITE_BUILD_NUMBER}/full_chip
+  LVS_CHECK: ./mflowgen/bin/buildcheck.sh --lvs
 
 steps:
 
@@ -27,6 +28,13 @@ steps:
      echo "--- MAKE TILE_ARRAY"; set -o pipefail;
      make tile_array |& tee make-tile_array.log'
 - wait: ~
+
+# Check tile_array LVS results but don't halt pipeline regardless of outcome
+- label: "lvs?"
+  commands:
+    - $LVS_CHECK $GOLD
+    - ($LVS_CHECK $GOLD | grep INCORRECT > /dev/null) && exit 13 || exit 0
+- wait: { continue_on_failure: true }
 
 - label: 'glb_top'
   commands:
@@ -105,6 +113,13 @@ steps:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 61G;
      echo "--- MAKE MENTOR-CALIBRE-LVS"; set -o pipefail;
      make mentor-calibre-lvs |& tee make-lvs.log'
+- wait: ~
+
+# Check LVS results and FAIL pipeline if results bad
+- label: "lvs?"
+  commands:
+    - $LVS_CHECK $GOLD
+    - ($LVS_CHECK $GOLD | grep INCORRECT > /dev/null) && exit 13 || exit 0
 - wait: ~
 
 # Not sure if this is ever useful...
