--- a/.buildkite/pipeline_fullchip.yml
+++ b/.buildkite/pipeline_fullchip.yml
@@ -8,7 +8,6 @@ env:
   LVS_CHECK: ./mflowgen/bin/buildcheck.sh --lvs
 
 steps:
-
 - label: 'setup'
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD;
@@ -100,13 +99,44 @@ steps:
      make cadence-innovus-postroute |& tee make-postroute.log'
 - wait: ~
 
-# Note: "echo exit 13" prevents hang at genus/innovus prompt, allows clean fail
-- label: 'hold'
+########################################################################
+# postroute_hold fails sometimes, thus all this infrastructure for retry.
+# 
+# "prh.sh" does the following:
+#   - if step "*-postroute_hold" exists already, do nothing and exit 0
+#   - if step does not exist yet, build it
+#   - if build fails, rename step to <step>-fail<i> and exit 13
+#   - meanwhile tees all outputs to make-prh.log
+#   - (if build fails, moves make-prh.log to step dir)
+########################################################################
+
+# postroute_hold, retry if fail.
+- label: "hold"
   commands:
   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-     echo "--- MAKE CADENCE-INNOVUS-POSTROUTE_HOLD"; set -o pipefail;
-     echo exit 13 | make cadence-innovus-postroute_hold |& tee make-hold.log'
+     echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
+     $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh1.log'
+- wait: { continue_on_failure: true }
+
+# First retry, continue with another retry on failure.
+- label: "hold'"
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- POSTROUTE_HOLD - SECOND ATTEMPT"; set -o pipefail;
+     $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh2.log'
+- wait: { continue_on_failure: true }
+
+# Final postroute_hold attempt, fail pipeline if this one bombs.
+- label: "hold''"
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- POSTROUTE_HOLD - FINAL ATTEMPT"; set -o pipefail;
+     $$GARNET_HOME/.buildkite/bin/prh.sh |& tee make-prh3.log'
 - wait: ~
+  
+########################################################################
+# continue to next step
+########################################################################
 
 - label: 'lvs'
   commands:
