--- a/.buildkite/pipelines/pe_lvs_standalone.yml
+++ b/.buildkite/pipelines/pe_lvs_standalone.yml
@@ -23,7 +23,6 @@ steps:
 - label: 'PE lvs check'
   commands:
   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps lvs --debug --use_cache constraints,custom-genus-scripts,custom-timing-assert,power-domains,rtl,tsmc16,cadence-genus-synthesis,custom-flowgen-setup,cadence-innovus-flowsetup,custom-init,cadence-innovus-init,custom-power-leaf,cadence-innovus-power,cadence-innovus-place,cadence-innovus-cts,cadence-innovus-postcts_hold,cadence-innovus-route,custom-short-fix,cadence-innovus-postroute,cadence-innovus-signoff
-  - 'echo "+++ DELETE SVDB DIRS"; set -x;
+  - 'echo "--- DELETE SVDB DIRS"; set -x;
      find full_chip -name svdb -exec echo /bin/rm -rf {} \; > /tmp/tmp$$.sh;
-     source /tmp/tmp$$.sh'
-  - /bin/rm /tmp/tmp$$.sh
+     source /tmp/tmp$$.sh; /bin/rm /tmp/tmp$$.sh'
