--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -16,12 +16,13 @@ steps:
 
 - label: test1
   commands:
-  - printf 'steps:\n-label: FAIL\n' |  buildkite-agent pipeline upload'
+  - echo -e 'steps:\n-label: FAIL\n' |  buildkite-agent pipeline upload'
   - exit 13
 
 - label: exit13
   commands:
   - exit 13
+- wait: ~
 
 
 
