upload tests ii

--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -16,7 +16,7 @@ steps:
 
 - label: test1
   commands:
-  - echo -e 'steps:\n-label: FAIL\n' |  buildkite-agent pipeline upload'
+  - 'echo -e "steps:\n-label: FAIL\n" |  buildkite-agent pipeline upload'
   - exit 13
 
 - label: exit13
