--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -16,9 +16,10 @@ steps:
 
 - label: test1
   commands:
-  - 'echo -e "steps:\n- label: FAIL"'
-  - 'echo -e "steps:\n- label: FAIL" | cat'
-  - 'echo -e "steps:\n- label:FAIL\n- command:echo" | buildkite-agent pipeline upload'
+  - 'echo -e "steps:\n- label: FAIL\n  command: echo"'
+  - 'echo -e "steps:\n- label: FAIL\n  command: echo" | cat'
+  - 'echo -e "steps:\n- label: FAIL\n  command: echo" | buildkite-agent pipeline upload'
+  - echo "steps:{label:FAIL,command:echo}" | buildkite-agent pipeline upload
   - exit 13
 
 - label: exit13
