--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -16,12 +16,9 @@ steps:
 
 - label: test1
   commands:
-  - 'echo -e "steps:\n- label: FAIL\n  command: echo"'
-  - 'echo -e "steps:\n- label: FAIL\n  command: echo" | cat'
-  - 'echo -e "steps:\n- label: FAIL\n  command: echo" | buildkite-agent pipeline upload'
-
-  - 'echo -e "steps:\n- label: FAIL"'
-  - 'echo -e "steps:\n- label: FAIL" | buildkite-agent pipeline upload'
+  - 'echo -e "steps:\n- label:FAIL\n  command:exit"'
+  - 'echo -e "steps:\n- label:FAIL\n  command:exit" | cat'
+  - 'echo -e "steps:\n- label:FAIL\n  command:exit" | buildkite-agent pipeline upload'
 
   - echo "steps:{'label':'FAIL','command':'echo'}"
   - echo "steps:{'label':'FAIL','command':'echo'}" | buildkite-agent pipeline upload
