--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -20,8 +20,8 @@ steps:
   - 'echo -e "steps:\n- label: FAIL\n  command: exit" | cat'
   - 'echo -e "steps:\n- label: FAIL\n  command: exit" | buildkite-agent pipeline upload'
 
-  - echo "steps:{'label':'FAIL','command':'echo'}"
-  - echo "steps:{'label':'FAIL','command':'echo'}" | buildkite-agent pipeline upload
+  - echo "steps:[{'label':'FAIL','command':'echo'}]"
+  - echo "steps:[{'label':'FAIL','command':'echo'}]" | buildkite-agent pipeline upload
 
   - echo "steps:{label:FAIL,command:echo}"
   - echo "steps:{label:FAIL,command:echo}" | buildkite-agent pipeline upload
