--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -15,7 +15,7 @@ env:
   #  PRH: $$GARNET_HOME/.buildkite/bin/prh.sh
   PRH: 'grep foo /dev/null'
 
-  FAIL1: 'echo -e "steps:\n- label: FAIL1\n  command: exit" | buildkite-agent pipeline upload'
+  FAIL1: 'set -x; echo -e steps:\n- label: FAIL1\n  command: exit | buildkite-agent pipeline upload'
   # FAIL1: 'steps:\n- label: FAIL1\n  command: exit'
 
 
@@ -30,7 +30,7 @@ steps:
 - label: "hold"
   commands:
   - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
-     $$PRH |& tee make-prh0.log || ($$FAIL1)'
+     $$PRH |& tee make-prh0.log || $$FAIL1'
 - wait: { continue_on_failure: true }
 
 #     $$PRH |& tee make-prh0.log || echo -n $$FAIL1 | buildkite-agent pipeline upload'
