--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -15,8 +15,8 @@ env:
   #  PRH: $$GARNET_HOME/.buildkite/bin/prh.sh
   PRH: 'grep foo /dev/null'
   STRING: 'foo bar'
-  CMD1: 'set -x; echo $$STRING'
-  CMD2: 'set -x; echo $STRING'
+  CMD1: 'echo -e steps:\n- label: FAIL1\n  command: exit'
+  CMD2: 'set -x ; echo $STRING'
 
 
 
@@ -38,7 +38,6 @@ steps:
   - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
      $$PRH || echo FAIL;
      echo "$$CMD1";
-     echo $$CMD1;
      $$CMD1;'
 - wait: { continue_on_failure: true }
 
