--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -28,22 +28,44 @@ env:
 # #   FAIL2: 'echo -e "steps:\n- label: FAIL2\n  command: exit" | buildkite-agent pipeline upload'
 
 
+steps : { label : FAIL1 , command : exit }
 
 
-steps:
 
-# postroute_hold, retry if fail.
-- label: "hold"
-  commands:
-  - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
-     $$PRH || echo FAIL;
-     echo "$$CMD1";
-     $$CMD1;
-     $$CMD1 | buildkite-agent pipeline upload;
-     $$CMD1;'
-- wait: { continue_on_failure: true }
+# steps:
+# 
+# # postroute_hold, retry if fail.
+# - label: "hold"
+#   commands:
+#   - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
+#      $$PRH || echo FAIL;
+#      echo "$$CMD1";
+#      $$CMD1;
+#      $$CMD1 | buildkite-agent pipeline upload;
+#      $$CMD1;'
+# - wait: { continue_on_failure: true }
+# 
+# #     $$PRH |& tee make-prh0.log || echo -n $$FAIL1 | buildkite-agent pipeline upload'
 
-#     $$PRH |& tee make-prh0.log || echo -n $$FAIL1 | buildkite-agent pipeline upload'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 # 
