lists and dicts syntax problems

--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -28,7 +28,7 @@ env:
 # #   FAIL2: 'echo -e "steps:\n- label: FAIL2\n  command: exit" | buildkite-agent pipeline upload'
 
 
-steps : { label : FAIL1 , command : exit }
+steps : [ { label : FAIL1 , command : exit } ]
 
 
 
