--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -14,26 +14,10 @@ env:
   GOLD: /build/prh${BUILDKITE_BUILD_NUMBER}/full_chip
   #  PRH: $$GARNET_HOME/.buildkite/bin/prh.sh
   PRH: 'grep foo /dev/null'
-  STRING: 'foo bar'
+  UPLOAD : 'buildkite-agent pipeline upload'
 
-  #  CMD1: 'echo -e steps:\n- label: FAIL1\n  \ command: exit'
-  CMD1: 'echo steps : [ { label : FAIL1 , command : exit } ]'
-
-  CMD2: 'set -x ; echo $STRING'
-
-
-
-#   # FAIL1: 'echo -e "steps:\n- label: FAIL1\n  command: exit" | buildkite-agent pipeline upload'
-#   FAIL1a: 'steps:\n- label: FAIL1\n  command: exit'
-#   FAIL1: 'set -x; echo -e $$FAIL1a | buildkite-agent pipeline upload'
-# 
-# 
-# #   FAIL2: 'echo -e "steps:\n- label: FAIL2\n  command: exit" | buildkite-agent pipeline upload'
-
-
-# steps : [ { label : FAIL1 , command : exit } ]
-
-
+  FAIL1: 'echo steps : [ { label : FAIL1 , command : exit } ]'
+  FAIL2: 'echo steps : [ { label : FAIL2 , command : exit } ]'
 
 steps:
 
@@ -42,68 +26,27 @@ steps:
   commands:
   - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
      $$PRH || echo FAIL;
-     echo "$$CMD1";
-     $$CMD1;
-     $$CMD1 | buildkite-agent pipeline upload;
-     $$CMD1;'
+     $$FAIL1 | $$UPLOAD'
+- wait: { continue_on_failure: true }
+
+# #     $$PRH |& tee make-prh0.log || echo -n $$FAIL1 | $$UPLOAD'
 
 
+# First retry, continue with another retry on failure.
+- label: "hold'"
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- POSTROUTE_HOLD - SECOND ATTEMPT"; set -o pipefail;
+     $$PRH |& tee make-prh1.log || $$FAIL2'
+- wait: { continue_on_failure: true }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-# - wait: { continue_on_failure: true }
-# 
-# #     $$PRH |& tee make-prh0.log || echo -n $$FAIL1 | buildkite-agent pipeline upload'
-# 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# 
-# 
-# # First retry, continue with another retry on failure.
-# - label: "hold'"
-#   commands:
-#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-#      echo "--- POSTROUTE_HOLD - SECOND ATTEMPT"; set -o pipefail;
-#      $$PRH |& tee make-prh1.log || $$FAIL2'
-# - wait: { continue_on_failure: true }
-# 
-# # Final postroute_hold attempt, fail pipeline if this one bombs.
-# - label: "hold''"
-#   commands:
-#   - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
-#      echo "--- POSTROUTE_HOLD - FINAL ATTEMPT"; set -o pipefail;
-#      $$PRH |& tee make-prh2.log || exit 13'
-# - wait: ~
+# Final postroute_hold attempt, fail pipeline if this one bombs.
+- label: "hold''"
+  commands:
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- POSTROUTE_HOLD - FINAL ATTEMPT"; set -o pipefail;
+     $$PRH |& tee make-prh2.log || exit 13'
+- wait: ~
 
 
 
@@ -128,12 +71,12 @@ steps:
 #   commands:
 # 
 #   # Insrt failure label
-#   - 'echo -e "steps:\n- label: FAIL1\n  command: exit" | buildkite-agent pipeline upload'
+#   - 'echo -e "steps:\n- label: FAIL1\n  command: exit" | $$UPLOAD'
 # 
 #   - echo But then go on and tdo other stuff
 # 
 #   # Another failure label
-#   - 'echo -e "steps:\n- label: FAIL2\n  command: exit" | buildkite-agent pipeline upload'
+#   - 'echo -e "steps:\n- label: FAIL2\n  command: exit" | $$UPLOAD'
 # 
 #   - echo And then even more dumb stuff
 #   - exit 1
@@ -161,3 +104,25 @@ steps:
 #   commands:
 #   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
 # - wait: { continue_on_failure: true } # One step at a time + continue on failure
+
+
+
+
+#   # FAIL1: 'echo -e "steps:\n- label: FAIL1\n  command: exit" | $$UPLOAD'
+#   FAIL1a: 'steps:\n- label: FAIL1\n  command: exit'
+#   FAIL1: 'set -x; echo -e $$FAIL1a | $$UPLOAD'
+# 
+# 
+# #   FAIL2: 'echo -e "steps:\n- label: FAIL2\n  command: exit" | $$UPLOAD'
+
+
+# steps : [ { label : FAIL1 , command : exit } ]
+
+
+
+
+
+#      echo "$$FAIL1";
+#      $$FAIL1;
+#      $$FAIL1 | $$UPLOAD;
+#      $$FAIL1;'
