--- a/.buildkite/pipelines/pmtile_synth_only.yml
+++ b/.buildkite/pipelines/pmtile_synth_only.yml
@@ -24,11 +24,10 @@ steps:
 # postroute_hold, retry if fail.
 - label: "hold"
   commands:
-  - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
+  - 'source mflowgen/bin/setup-buildkite.sh --dir $$GOLD --need_space 70G;
+     echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
      $$PRH |& tee make-prh0.log || $$FAIL1 | $$UPLOAD'
 - wait: { continue_on_failure: true }
-
-
 
 # First retry, continue with another retry on failure.
 - label: "hold'"
@@ -46,14 +45,48 @@ steps:
      $$PRH |& tee make-prh2.log || exit 13'
 - wait: ~
 
+# ##############################################################################
+# # INDIVIDUAL TILE RUNS
+# 
+# - label: '250MHz PE synth 12m'
+#   commands:
+#   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
+#   - .buildkite/pipelines/check_pe_area.sh
+# - wait: { continue_on_failure: true } # One step at a time + continue on failure
+# 
+# - label: 'MemCore synth 17m'
+#   commands:
+#   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
+# - wait: { continue_on_failure: true } # One step at a time + continue on failure
 
 
+##############################################################################
+##############################################################################
+##############################################################################
+# THE TRASH
 
+#   # FAIL1: 'echo -e "steps:\n- label: FAIL1\n  command: exit" | $$UPLOAD'
+#   FAIL1a: 'steps:\n- label: FAIL1\n  command: exit'
+#   FAIL1: 'set -x; echo -e $$FAIL1a | $$UPLOAD'
+# 
+# 
+# #   FAIL2: 'echo -e "steps:\n- label: FAIL2\n  command: exit" | $$UPLOAD'
+
+
+# steps : [ { label : FAIL1 , command : exit } ]
+
+#      echo "$$FAIL1";
+#      $$FAIL1;
+#      $$FAIL1 | $$UPLOAD;
+#      $$FAIL1;'
+
+# #     $$PRH |& tee make-prh0.log || echo -n $$FAIL1 | $$UPLOAD'
+
+#   - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
+#      $$PRH || echo FAIL;
+#      $$FAIL1 | $$UPLOAD'
 
 # (exit 13) |& tee make-prh0.log || echo FAIL
-
-
-
 
 # - label: exit13
 #   commands:
@@ -89,40 +122,3 @@ steps:
 # 
 # 
 # 
-# ##############################################################################
-# # INDIVIDUAL TILE RUNS
-# 
-# - label: '250MHz PE synth 12m'
-#   commands:
-#   - $TEST --need_space 30G full_chip tile_array Tile_PE --steps synthesis --debug
-#   - .buildkite/pipelines/check_pe_area.sh
-# - wait: { continue_on_failure: true } # One step at a time + continue on failure
-# 
-# - label: 'MemCore synth 17m'
-#   commands:
-#   - $TEST --need_space 30G full_chip tile_array Tile_MemCore --steps synthesis --debug
-# - wait: { continue_on_failure: true } # One step at a time + continue on failure
-
-
-
-
-#   # FAIL1: 'echo -e "steps:\n- label: FAIL1\n  command: exit" | $$UPLOAD'
-#   FAIL1a: 'steps:\n- label: FAIL1\n  command: exit'
-#   FAIL1: 'set -x; echo -e $$FAIL1a | $$UPLOAD'
-# 
-# 
-# #   FAIL2: 'echo -e "steps:\n- label: FAIL2\n  command: exit" | $$UPLOAD'
-
-
-# steps : [ { label : FAIL1 , command : exit } ]
-
-#      echo "$$FAIL1";
-#      $$FAIL1;
-#      $$FAIL1 | $$UPLOAD;
-#      $$FAIL1;'
-
-# #     $$PRH |& tee make-prh0.log || echo -n $$FAIL1 | $$UPLOAD'
-
-#   - 'echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"; set -o pipefail;
-#      $$PRH || echo FAIL;
-#      $$FAIL1 | $$UPLOAD'
