--- a/.buildkite/pipelines/postroute_hold_standalone.yml
+++ b/.buildkite/pipelines/postroute_hold_standalone.yml
@@ -23,7 +23,6 @@ env:
 steps:
   - label: 'setup'
     commands:
-    # - 'exit 0;
     - '$$SETUP_BK 1G;
        mflowgen run --design $$GARNET_HOME/mflowgen/full_chip;
        grep slack .mflowgen/*postroute_hold/mflowgen-run;
@@ -44,10 +43,7 @@ steps:
   - label: "hold"
     commands:
       - echo "--- POSTROUTE_HOLD - FIRST ATTEMPT"
-      - 'set -o pipefail; set -x ; $$SETUP_BK 1G;
-         set -x; ls $$GARNET_HOME;
-         ls $$GARNET_HOME/mflowgen/bin;
-         $$SETUP_PRH;
+      - 'set -o pipefail; $$SETUP_BK 1G; $$SETUP_PRH;
          $$RUN_PRH make-prh0.log || $$FAIL1 | $$UPLOAD'
 
   - wait: { continue_on_failure: true }
