Add error print

--- a/global_buffer/Makefile
+++ b/global_buffer/Makefile
@@ -1,7 +1,7 @@
 #!/bin/bash
 RTL_DIR := ./rtl
 RDL_DIR := systemRDL/output
-TB_DIR := ./sim
+TB_DIR := ./sim-v2
 
 TOP_MODULE := global_buffer
 
@@ -9,14 +9,12 @@ CGRA_WIDTH ?= 32
 NUM_GLB_TILES ?= $(shell expr $(CGRA_WIDTH) / 2 )
 GLB_TILE_MEM_SIZE ?= 256
 XRUNARGS = 
-# XRUNARGS += +TEST_PROC_SIMPLE
-# XRUNARGS += +TEST_PROC_ALL
-# XRUNARGS += +TEST_JTAG
-# XRUNARGS += +TEST_CONFIG
-XRUNARGS += +TEST_PCFG
-# XRUNARGS += +TEST_STRM
-# XRUNARGS += +TEST_STRM_CHAIN
-XRUNARGS += +VCD_ON
+XRUNARGS += +TEST_GLB_MEM_SIMPLE
+XRUNARGS += +TEST_GLB_CFG
+XRUNARGS += +TEST_GLB_G2F_STREAM
+XRUNARGS += +TEST_GLB_F2G_STREAM
+XRUNARGS += +TEST_PCFG_STREAM
+# XRUNARGS += +VCD_ON
 
 
 GLB_TILE_NETLIST := ./netlist/glb_tile.vcs.v
