glb_tile standalone test update

--- a/.buildkite/pipelines/glb_tile.yml
+++ b/.buildkite/pipelines/glb_tile.yml
@@ -1,3 +1,5 @@
+# Builds glb_tile ONLY using cached gold collateral
+
 agents: { jobsize: "hours" }
 
 ##############################################################################
@@ -24,10 +26,11 @@ steps:
 
   # Link to existing rtl result
   - set -x; mkdir -p full_chip/14-glb_top/inputs
-  - set -x; pushd full_chip/14-glb_top/inputs; ln -s ../../9-rtl/outputs/design.v; popd
+  - set -x; pushd full_chip/*-glb_top/inputs; ln -s ../../*[0-9]-rtl/outputs/design.v; popd
 
   # (Re?)run RTL, then do glb tile
   - $TEST --need_space 3G full_chip glb_top --steps rtl --debug
   - $TEST --need_space 3G full_chip glb_top --steps glb_tile --debug
 
 - wait: { continue_on_failure: true } # One step at a time + continue on failure
+
